# atl-touch

./: meson.build
.github/workflows/: build-sdk.yml
ci/: README.md  apt-deps.txt  build-sdk.sh
ci/patches/: art_standalone-d8.patch  bionic_translation-stdio-glibc.patch  bionic_translation-ut.patch
doc/: de-gtk-inventory.md
src/api-impl/: meson.build  strip_compile_only_stubs.py
src/api-impl-jni/: ATLWindow.c  ATLWindow.h  android_content_res_AssetManager.c  android_opengl_GLUtils.c  android_os_MessageQueue.c  android_view_Window.c  defines.h  handle_cache.c  handle_cache.h  jni_cpp.h  util.c  util.h  util_gtk.h
src/api-impl-jni/app/: android_app_Activity.c  android_app_AlertDialog.c  android_app_Dialog.c  android_app_NotificationManager.c  android_app_WallpaperManager.c
src/api-impl-jni/audio/: android_media_AudioRecord.c  android_media_AudioTrack.c  android_media_SoundPool.c
src/api-impl-jni/content/: android_content_ClipboardManager.c  android_content_Context.c
src/api-impl-jni/egl/: com_google_android_gles_jni_EGLImpl.c
src/api-impl-jni/generated_headers/: android_app_Activity.h  android_app_AlertDialog.h  android_app_WallpaperManager.h  android_content_ClipboardManager.h  android_content_Context.h  android_graphics_BaseCanvas.h  android_graphics_Bitmap.h  android_graphics_BitmapFactory.h  android_graphics_BitmapShader.h  android_graphics_Canvas.h  android_graphics_LinearGradient.h  android_graphics_NinePatch.h  android_graphics_Paint.h  android_graphics_Path.h  android_graphics_PorterDuffColorFilter.h  android_graphics_RadialGradient.h  android_graphics_Region.h  android_graphics_RegionIterator.h  android_graphics_Shader.h  android_graphics_Typeface.h  android_graphics_text_LineBreaker.h  android_graphics_text_MeasuredText.h  android_graphics_text_MeasuredText_Builder.h  android_graphics_text_PositionedGlyphs.h  android_graphics_text_TextRunShaper.h  android_media_MediaPlayer.h  android_media_SoundPool.h  android_view_SurfaceView.h  android_view_ViewRootImpl.h  android_view_Window.h  android_view_inputmethod_InputMethodManager.h  android_webkit_WebView.h
src/api-impl-jni/graphics/: ATLCanvas.cpp  ATLCanvas.h  ATLShader.h  AndroidPaint.h  NinePatchChunk.h  NinePatchPaintable.h  NinePatchSkia.cpp  android_atl_GskCanvas.cpp  android_graphics_Bitmap.cpp  android_graphics_BitmapFactory.cpp  android_graphics_Canvas.cpp  android_graphics_Matrix.cpp  android_graphics_NinePatch.cpp  android_graphics_Paint.cpp  android_graphics_Path.cpp  android_graphics_Region.cpp  android_graphics_Shader.cpp  android_graphics_drawable_Drawable.cpp  android_graphics_drawable_NinePatchDrawable.cpp  android_view_RenderNode.cpp
src/api-impl-jni/hwui/: MinikinGlue.cpp  MinikinGlue.h  MinikinSkia.cpp  MinikinSkia.h  Typeface.cpp  Typeface.h  TypefaceCollection.cpp  android_graphics_Typeface.cpp
src/api-impl-jni/input/: input_method.c  input_method.h  input_method_maliit.c
src/api-impl-jni/media/: android_media_MediaCodec.c  android_media_MediaPlayer.c  atl_gst.c  atl_gst.h  codec_backend.c  codec_backend.h  codec_backend_ffmpeg.c  video_frame_skia.cpp
src/api-impl-jni/sensors/: android_hardware_SensorManager.c
src/api-impl-jni/text/: android_graphics_text_LineBreaker.cpp  android_graphics_text_MeasuredText.cpp  android_text_Layout.cpp
src/api-impl-jni/views/: ATLSceneWidget.c  ATLSceneWidget.h  android_view_View.c  android_view_ViewGroup.c
src/api-impl-jni/widgets/: WrapperWidget.c  android_view_SurfaceView.c  android_webkit_WebView.cpp  webview_backend.h  webview_qt.cpp  webview_qt_bridge.h  webview_wpe.c
src/api-impl/android/: R.java
src/api-impl/android/animation/: AnimatorInflater.java  LayoutTransition.java
src/api-impl/android/annotation/: AttrRes.java  ColorInt.java  ColorLong.java  DrawableRes.java  Px.java  Size.java
src/api-impl/android/app/: Activity.java  ActivityManager.java  AlertDialog.java  Application.java  Dialog.java  Notification.java  Person.java  WallpaperManager.java
src/api-impl/android/appwidget/: AppWidgetManager.java
src/api-impl/android/atl/: ATLFilePicker.java  ATLKeyboardDialog.java  ATLMediaContentProvider.java  GskCanvas.java
src/api-impl/android/content/: ActivityNotFoundException.java  ClipboardManager.java  ContentProvider.java  Context.java  DialogInterface.java
src/api-impl/android/graphics/: BaseCanvas.java  Bitmap.java  BitmapFactory.java  BitmapShader.java  Canvas.java  Color.java  ColorFilter.java  ColorSpace.java  DrawFilter.java  LinearGradient.java  MaskFilter.java  Matrix.java  NinePatch.java  Paint.java  Path.java  PathEffect.java  Picture.java  PorterDuffColorFilter.java  PorterDuffXfermode.java  RadialGradient.java  Rasterizer.java  Region.java  Shader.java  Typeface.java  Xfermode.java
src/api-impl/android/hardware/: Camera.java
src/api-impl/android/inputmethodservice/: InputMethodService.java
src/api-impl/android/media/: MediaPlayer.java  SoundPool.java
src/api-impl/android/net/: NetworkInfo.java  NetworkRequest.java
src/api-impl/android/os/: Bundle.java
src/api-impl/android/provider/: Browser.java  MediaStore.java  Settings.java
src/api-impl/android/text/: AndroidBidi.java  BoringLayout.java  DynamicLayout.java  GraphicsOperations.java  Layout.java  SpanSet.java  SpannableString.java  StaticLayout.java  TemporaryBuffer.java  TextLine.java  TextUtils.java
src/api-impl/android/transition/: AutoTransition.java  ChangeBounds.java  Fade.java  Transition.java  TransitionManager.java  TransitionSet.java  TransitionValues.java  Visibility.java
src/api-impl/android/util/: DisplayMetrics.java  LongSparseLongArray.java  PathParser.java
src/api-impl/android/view/: ContentInfo.java  Display.java  DisplayListCanvas.java  FrameMetrics.java  MenuItem.java  MotionEvent.java  OnReceiveContentListener.java  RenderNode.java  Surface.java  View.java  (+13 more)
src/libandroid/: bitmap.c  egl.c  input.c  looper.h  native_window.c  native_window.h
src/main-executable/: bionic_compat.c  libc_bio_path_overrides.c  main.c
subprojects/: .gitignore  skia.wrap
subprojects/packagefiles/skia/: build_skia.py  meson.build
(+85 files in other folders)
